--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/dotenv": "^1.4.1",
+    "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "js-cookie": "^2.2.1",
+    "nuxt": "^2.14.5",
+    "nuxt-i18n": "^6.15.1",
+    "v-click-outside": "^3.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
