--- a/app/package.json
+++ b/app/package.json
@@ -11,13 +11,17 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.14.5",
     "nuxt-i18n": "^6.15.1",
+    "random-avatar-generator": "^2.0.0",
     "v-click-outside": "^3.1.2"
   },
   "devDependencies": {
