implemented first draft of theme color picker and theme overview

--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "nuxt-i18n": "^6.15.1",
     "random-avatar-generator": "^2.0.0",
     "v-click-outside": "^3.1.2",
+    "vue-color": "^2.7.1",
     "vuejs-avataaars": "^4.0.1"
   },
   "devDependencies": {
