--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,9 +1,12 @@
+aiosmtplib==1.1.4
 bcrypt==3.2.0
 cffi==1.14.3
+chardet==3.0.4
 click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.1
 fastapi==0.61.1
+fastapi-mail==0.2.8.2
 fastapi-users==3.0.5
 h11==0.9.0
 httptools==0.1.1
