--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -20,6 +20,7 @@ pycparser==2.20
 pydantic==1.6.1
 PyJWT==1.7.1
 pymongo==3.11.0
+python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-multipart==0.0.5
 six==1.15.0
