--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/fontawesome": "^1.1.2",
+    "chart.js": "^2.9.3",
     "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
@@ -24,6 +25,7 @@
     "nuxt-i18n": "^6.15.1",
     "uuid": "^8.3.1",
     "v-click-outside": "^3.1.2",
+    "vue-chartjs": "^3.5.1",
     "vue-color": "^2.7.1",
     "vuejs-avataaars": "^4.0.1"
   },
