refactored view of question charts due to the need to show percentages

--- a/app/package.json
+++ b/app/package.json
@@ -16,16 +16,16 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "chart.js": "^2.9.3",
     "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
+    "d3": "^6.2.0",
+    "d3-tip": "^0.9.1",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.0.0",
     "nuxt": "^2.14.5",
     "nuxt-i18n": "^6.15.1",
     "uuid": "^8.3.1",
     "v-click-outside": "^3.1.2",
-    "vue-chartjs": "^3.5.1",
     "vue-color": "^2.7.1",
     "vuejs-avataaars": "^4.0.1"
   },
