removed fixed versions from requirements and updated dependency installation in readme

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,30 +1,30 @@
-aiofiles==0.5.0
-aiosmtplib==1.1.4
-bcrypt==3.2.0
-cffi==1.14.3
-chardet==3.0.4
-click==7.1.2
-dnspython==2.0.0
-email-validator==1.1.1
-fastapi==0.61.1
-fastapi-mail==0.2.8.3
-fastapi-users==3.0.5
-h11==0.11.0
-httptools==0.1.1
-idna==2.10
-makefun==1.9.3
-motor==2.3.0
-passlib==1.7.3
-polib==1.1.0
-pycparser==2.20
-pydantic==1.6.1
-PyJWT==1.7.1
-pymongo==3.11.0
-python-dateutil==2.8.1
-python-dotenv==0.14.0
-python-multipart==0.0.5
-six==1.15.0
-starlette==0.13.8
-uvicorn==0.12.1
-uvloop==0.14.0
-websockets==8.1
+aiofiles
+aiosmtplib
+bcrypt
+cffi
+chardet
+click
+dnspython
+email-validator
+fastapi
+fastapi-mail
+fastapi-users
+h11
+httptools
+idna
+makefun
+motor
+passlib
+polib
+pycparser
+pydantic
+PyJWT
+pymongo
+python-dateutil
+python-dotenv
+python-multipart
+six
+starlette
+uvicorn
+uvloop
+websockets
