--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install anyio pytest pytest-asyncio
-        pip install -r requirements.txt
+        pip install -r requirements.txt --use-feature=2020-resolver
       working-directory: api
 
     - name: Test with pytest
