removed ansible module and wrote an own github action script

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -12,25 +12,65 @@ jobs:
     - name: Checkout latest master branch
       uses: actions/checkout@v2
 
-    - name: Setup deployment scripts
-      uses: dawidd6/action-ansible-playbook@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
       with:
-        playbook: sites.yml
-        directory: ./ansible
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        inventory: |
+        python-version: 3.8
+
+    - name: Install ansible with pip
+      run: |
+        python -m pip install --upgrade pip
+        pip install anyio ansible
+      working-directory: ansible
+
+    - name: Run ansible playbook
+      run: |
+        ansible-playbook sites.yml
+        --inventory "$INVENTORY"
+        --private-key "$SSH_PRIVATE_KEY"
+      working-directory: ansible
+      env:
+        DB_NAME: ${{ secrets.DB_NAME }}
+        APP_NAME: ${{ secrets.APP_NAME }}
+        JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
+        APP_DOMAIN: ${{ secrets.APP_DOMAIN }}
+        API_DOMAIN: ${{ secrets.API_DOMAIN }}
+        ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        RESET_SECRET: ${{ secrets.RESET_SECRET }}
+        DB_URL_STRING: ${{ secrets.DB_URL_STRING }}
+        DB_PRIVATE_ADDRESS: ${{ secrets.DB_PRIVATE_ADDRESS }}
+        APP_PRIVATE_ADDRESS: ${{ secrets.APP_PRIVATE_ADDRESS }}
+        API_PRIVATE_ADDRESS: ${{ secrets.API_PRIVATE_ADDRESS }}
+        GENERAL_PASSWORD_SALT: ${{ secrets.GENERAL_PASSWORD_SALT }}
+        WEBSERVER_PASSWORD: ${{ secrets.WEBSERVER_PASSWORD }}
+        APPSERVER_PASSWORD: ${{ secrets.APPSERVER_PASSWORD }}
+        APISERVER_PASSWORD: ${{ secrets.APISERVER_PASSWORD }}
+        DBSERVER_PASSWORD: ${{ secrets.DBSERVER_PASSWORD }}
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
+        SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+        SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
+        WEB_SERVER: ${{ secrets.WEB_SERVER }}
+        API_SERVER: ${{ secrets.API_SERVER }}
+        APP_SERVER: ${{ secrets.APP_SERVER }}
+        DB_SERVER: ${{ secrets.DB_SERVER }}
+        SMTP_PORT: ${{ secrets.SMTP_PORT }}
+        SMTP_TLS: ${{ secrets.SMTP_TLS }}
+        SMTP_SSL: ${{ secrets.SMTP_SSL }}
+        INVENTORY: |
           [webserver]
-          '$WEB_SERVER' ansible_user=root
+          $WEB_SERVER ansible_user=root
 
           [apiserver]
-          '$API_SERVER' ansible_user=root
+          $API_SERVER ansible_user=root
 
           [appserver]
-          '$APP_SERVER' ansible_user=root
+          $APP_SERVER ansible_user=root
 
           [dbserver]
-          '$DB_SERVER' ansible_user=root
-        options: |
+          $DB_SERVER ansible_user=root
+        OPTIONS: |
           --extra-vars "db_name='$DB_NAME'"
           --extra-vars "app_name='$APP_NAME'"
           --extra-vars "app_domain='$APP_DOMAIN'"
@@ -54,32 +94,3 @@ jobs:
           --extra-vars "smtp_port='$SMTP_PORT'"
           --extra-vars "smtp_tls='$SMTP_TLS'"
           --extra-vars "smtp_ssl='$SMTP_SSL'"
-          --verbose
-      env:
-        DB_NAME: ${{ secrets.DB_NAME }}
-        APP_NAME: ${{ secrets.APP_NAME }}
-        JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
-        APP_DOMAIN: ${{ secrets.APP_DOMAIN }}
-        API_DOMAIN: ${{ secrets.API_DOMAIN }}
-        ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        RESET_SECRET: ${{ secrets.RESET_SECRET }}
-        DB_URL_STRING: ${{ secrets.DB_URL_STRING }}
-        DB_PRIVATE_ADDRESS: ${{ secrets.DB_PRIVATE_ADDRESS }}
-        APP_PRIVATE_ADDRESS: ${{ secrets.APP_PRIVATE_ADDRESS }}
-        API_PRIVATE_ADDRESS: ${{ secrets.API_PRIVATE_ADDRESS }}
-        GENERAL_PASSWORD_SALT: ${{ secrets.GENERAL_PASSWORD_SALT }}
-        WEBSERVER_PASSWORD: ${{ secrets.WEBSERVER_PASSWORD }}
-        APPSERVER_PASSWORD: ${{ secrets.APPSERVER_PASSWORD }}
-        APISERVER_PASSWORD: ${{ secrets.APISERVER_PASSWORD }}
-        DBSERVER_PASSWORD: ${{ secrets.DBSERVER_PASSWORD }}
-        SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
-        SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-        SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
-        WEB_SERVER: ${{ secrets.WEB_SERVER }}
-        API_SERVER: ${{ secrets.API_SERVER }}
-        APP_SERVER: ${{ secrets.APP_SERVER }}
-        DB_SERVER: ${{ secrets.DB_SERVER }}
-        SMTP_PORT: ${{ secrets.SMTP_PORT }}
-        SMTP_TLS: ${{ secrets.SMTP_TLS }}
-        SMTP_SSL: ${{ secrets.SMTP_SSL }}
