--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -24,11 +24,6 @@ jobs:
       working-directory: ansible
 
     - name: Run ansible playbook
-      run: |
-        ansible-playbook sites.yml
-        --inventory "$INVENTORY"
-        --private-key "$SSH_PRIVATE_KEY"
-      working-directory: ansible
       env:
         DB_NAME: ${{ secrets.DB_NAME }}
         APP_NAME: ${{ secrets.APP_NAME }}
@@ -94,3 +89,5 @@ jobs:
           --extra-vars "smtp_port='$SMTP_PORT'"
           --extra-vars "smtp_tls='$SMTP_TLS'"
           --extra-vars "smtp_ssl='$SMTP_SSL'"
+        run: ansible-playbook sites.yml --inventory "$INVENTORY" --private-key "$SSH_PRIVATE_KEY"
+        working-directory: ansible
