--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -23,6 +23,28 @@ jobs:
         pip install anyio ansible
       working-directory: ansible
 
+    - name: Create ansible hosts file
+      env:
+        WEB_SERVER: ${{ secrets.WEB_SERVER }}
+        API_SERVER: ${{ secrets.API_SERVER }}
+        APP_SERVER: ${{ secrets.APP_SERVER }}
+        DB_SERVER: ${{ secrets.DB_SERVER }}
+        HOSTS: |
+          [webserver]
+          $WEB_SERVER ansible_user=root
+
+          [apiserver]
+          $API_SERVER ansible_user=root
+
+          [appserver]
+          $APP_SERVER ansible_user=root
+
+          [dbserver]
+          $DB_SERVER ansible_user=root
+      run: |
+        echo "$HOSTS"
+        echo "$HOSTS" >> hosts
+
     - name: Run ansible playbook
       env:
         DB_NAME: ${{ secrets.DB_NAME }}
@@ -46,48 +68,32 @@ jobs:
         SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
         SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
         SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
-        WEB_SERVER: ${{ secrets.WEB_SERVER }}
-        API_SERVER: ${{ secrets.API_SERVER }}
-        APP_SERVER: ${{ secrets.APP_SERVER }}
-        DB_SERVER: ${{ secrets.DB_SERVER }}
         SMTP_PORT: ${{ secrets.SMTP_PORT }}
         SMTP_TLS: ${{ secrets.SMTP_TLS }}
         SMTP_SSL: ${{ secrets.SMTP_SSL }}
-        INVENTORY: |
-          [webserver]
-          $WEB_SERVER ansible_user=root
-
-          [apiserver]
-          $API_SERVER ansible_user=root
-
-          [appserver]
-          $APP_SERVER ansible_user=root
-
-          [dbserver]
-          $DB_SERVER ansible_user=root
         OPTIONS: |
-          --extra-vars "db_name='$DB_NAME'"
-          --extra-vars "app_name='$APP_NAME'"
-          --extra-vars "app_domain='$APP_DOMAIN'"
-          --extra-vars "api_domain='$API_DOMAIN'"
-          --extra-vars "admin_email='$ADMIN_EMAIL'"
-          --extra-vars "jwt_secret='$JWT_TOKEN'"
-          --extra-vars "reset_secret='$RESET_SECRET'"
-          --extra-vars "db_private_address='$DB_PRIVATE_ADDRESS'"
-          --extra-vars "app_private_address='$APP_PRIVATE_ADDRESS'"
-          --extra-vars "api_private_address='$API_PRIVATE_ADDRESS'"
-          --extra-vars "db_password='$DB_PASSWORD'"
-          --extra-vars "db_url_string='$DB_URL_STRING'"
-          --extra-vars "dbserver_password='$DBSERVER_PASSWORD'"
-          --extra-vars "webserver_password='$WEBSERVER_PASSWORD'"
-          --extra-vars "appserver_password='$APPSERVER_PASSWORD'"
-          --extra-vars "apiserver_password='$APISERVER_PASSWORD'"
-          --extra-vars "general_password_salt='$GENERAL_PASSWORD_SALT'"
-          --extra-vars "smtp_username='$SMTP_USERNAME'"
-          --extra-vars "smtp_password='$SMTP_PASSWORD'"
-          --extra-vars "smtp_server='$SMTP_SERVER'"
-          --extra-vars "smtp_port='$SMTP_PORT'"
-          --extra-vars "smtp_tls='$SMTP_TLS'"
-          --extra-vars "smtp_ssl='$SMTP_SSL'"
-      run: ansible-playbook sites.yml --inventory "$INVENTORY" --private-key "$SSH_PRIVATE_KEY"
+          --extra-vars 'db_name="$DB_NAME"'
+          --extra-vars 'app_name="$APP_NAME"'
+          --extra-vars 'app_domain="$APP_DOMAIN"'
+          --extra-vars 'api_domain="$API_DOMAIN"'
+          --extra-vars 'admin_email="$ADMIN_EMAIL"'
+          --extra-vars 'jwt_secret="$JWT_TOKEN"'
+          --extra-vars 'reset_secret="$RESET_SECRET"'
+          --extra-vars 'db_private_address="$DB_PRIVATE_ADDRESS"'
+          --extra-vars 'app_private_address="$APP_PRIVATE_ADDRESS"'
+          --extra-vars 'api_private_address="$API_PRIVATE_ADDRESS"'
+          --extra-vars 'db_password="$DB_PASSWORD"'
+          --extra-vars 'db_url_string="$DB_URL_STRING"'
+          --extra-vars 'dbserver_password="$DBSERVER_PASSWORD"'
+          --extra-vars 'webserver_password="$WEBSERVER_PASSWORD"'
+          --extra-vars 'appserver_password="$APPSERVER_PASSWORD"'
+          --extra-vars 'apiserver_password="$APISERVER_PASSWORD"'
+          --extra-vars 'general_password_salt="$GENERAL_PASSWORD_SALT"'
+          --extra-vars 'smtp_username="$SMTP_USERNAME"'
+          --extra-vars 'smtp_password="$SMTP_PASSWORD"'
+          --extra-vars 'smtp_server="$SMTP_SERVER"'
+          --extra-vars 'smtp_port="$SMTP_PORT"'
+          --extra-vars 'smtp_tls="$SMTP_TLS"'
+          --extra-vars 'smtp_ssl="$SMTP_SSL"'
+      run: ansible-playbook sites.yml --private-key "$SSH_PRIVATE_KEY" --inventory hosts "$OPTIONS"
       working-directory: ansible
