--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -31,18 +31,21 @@ jobs:
         DB_SERVER: ${{ secrets.DB_SERVER }}
         HOSTS: |
           [webserver]
-          $WEB_SERVER ansible_user=root
+          "${{ env.WEB_SERVER }}" ansible_user=root
 
           [apiserver]
-          $API_SERVER ansible_user=root
+          "${{ env.API_SERVER }}" ansible_user=root
 
           [appserver]
-          $APP_SERVER ansible_user=root
+          "${{ env.APP_SERVER }}" ansible_user=root
 
           [dbserver]
-          $DB_SERVER ansible_user=root
+          "${{ env.DB_SERVER }}" ansible_user=root
       run: |
-        echo "$HOSTS"
+        echo "$WEB_SERVER"
+        echo "$API_SERVER"
+        echo "$APP_SERVER"
+        echo "$DB_SERVER"
         echo "$HOSTS" >> hosts
 
     - name: Run ansible playbook
