--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -48,7 +48,7 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       run: |
-        cat "$SSH_PRIVATE_KEY" > id_rsa
+        echo "$SSH_PRIVATE_KEY" > id_rsa
       working-directory: ansible
 
     - name: Run ansible playbook
