--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -49,6 +49,7 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       run: |
         echo "$SSH_PRIVATE_KEY" > id_rsa
+        chmod 400 id_rsa
       working-directory: ansible
 
     - name: Run ansible playbook
