--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rowmate",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -22,14 +22,14 @@
     "d3-tip": "^0.9.1",
     "dayjs-dynamic-locale": "0.0.7",
     "js-cookie": "^2.2.1",
-    "jwt-decode": "^3.0.0",
     "nuxt": "^2.14.5",
     "nuxt-i18n": "^6.15.1",
+    "tailwindcss": "^1.9.4",
     "uuid": "^8.3.1",
     "v-click-outside": "^3.1.2",
     "vue-color": "^2.7.1",
     "vue-dayjs": "^1.0.2",
-    "vue-tailwind-datetime-picker": "^1.0.3",
+    "vue-tailwind-datetime-picker": "^1.0.4",
     "vuejs-avataaars": "^4.0.1"
   },
   "devDependencies": {
