fixed issues after upgrading dependencies from fastapi_users

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,46 +1,68 @@
-aiofiles
-aiosmtplib
-bcrypt
-beautifulsoup4
-cachetools
-certifi
-cffi
-chardet
-click
-dnspython
-email-validator
-fastapi
-fastapi-mail
-fastapi-users
-google-auth
-h11
-httpcore
-httptools
-httpx
-httpx-oauth
-idna
-makefun
-motor
-passlib
-polib
-pyasn1
-pyasn1-modules
-pycparser
-pydantic
-PyJWT
-pymongo
-python-dateutil
-python-dotenv
-python-multipart
-requests
-rfc3986
-rsa
-six
-sniffio
-soupsieve
+aioredis==1.3.1
+aiosmtplib==1.1.5
+async-timeout==3.0.1
+bcrypt==3.2.0
+beautifulsoup4==4.9.3
+blinker==1.4
+bson==0.5.10
+cachetools==4.2.2
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+cryptography==3.4.7
+Deprecated==1.2.12
+dnspython==2.1.0
+email-validator==1.1.2
+fakeredis==1.5.0
+fastapi==0.63.0
+fastapi-mail==0.3.7
+fastapi-users==6.0.0
+google==3.0.0
+google-api-core==1.26.3
+google-api-python-client==2.3.0
+google-auth==1.30.0
+google-auth-httplib2==0.1.0
+google-oauth==1.0.1
+googleapis-common-protos==1.53.0
+h11==0.12.0
+hiredis==2.0.0
+httpcore==0.12.3
+httplib2==0.19.1
+httpx==0.17.1
+httpx-oauth==0.3.5
+idna==2.10
+Jinja2==2.11.3
+makefun==1.11.3
+MarkupSafe==1.1.1
+motor==2.4.0
+packaging==20.9
+passlib==1.7.4
+polib==1.1.1
+protobuf==3.16.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pydantic==1.8.1
+PyJWT==2.0.1
+pymongo==3.11.4
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-multipart==0.0.5
+pytz==2021.1
+redis==3.5.3
+requests==2.25.1
+rfc3986==1.5.0
+rsa==4.7.2
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.3.0
+soupsieve==2.2.1
 starlette==0.13.6
-typing-extensions
-urllib3
-uvicorn
-uvloop
-websockets
+typing-extensions==3.10.0.0
+uritemplate==3.0.1
+urllib3==1.26.4
+uvicorn==0.13.4
+wrapt==1.12.1
