--- a/ansible/roles/db/tasks/main.yml
+++ b/ansible/roles/db/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: ensure mongodb is installed
+  apt:
+    name: mongodb
+    state: present
+    notify:
+      - start mongodb
 
 - name: create an ubuntu user with less rights
   user:
