--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,7 +14,7 @@ Deprecated==1.2.12
 dnspython==2.1.0
 email-validator==1.1.2
 fakeredis==1.5.0
-fastapi==0.63.0
+fastapi>=0.65.2
 fastapi-mail==0.3.7
 fastapi-users==6.0.0
 google==3.0.0
@@ -59,7 +59,7 @@ six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.3.0
 soupsieve==2.2.1
-starlette==0.13.6
+starlette==0.14.2
 typing-extensions==3.10.0.0
 uritemplate==3.0.1
 urllib3==1.26.4
