--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -16,7 +16,7 @@ email-validator==1.1.2
 fakeredis==1.5.0
 fastapi>=0.65.2
 fastapi-mail==0.3.7
-fastapi-users==6.0.0
+fastapi-users>=6.0.0
 google==3.0.0
 google-api-core==1.26.3
 google-api-python-client==2.3.0
